--- a/index.html
+++ b/index.html
@@ -15,11 +15,12 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1><a href="https://rainleander.github.io/">Equinix Metal Community</a></h1>
+        <h1><a href="https://packethost.github.io/community/">Equinix Metal Community</a></h1>
         
+        <p><a href="metal.equinix.com">http://metal.equinix.com/</a></p>
+
         <p><a href="eqix-metal-community.slack.com">eqix-metal-community.slack.com</a><br>
-          <a href="https://slack.equinixmetal.com/">Slack Invite</a><br>
-          <a href="http://metal.equinix.com/">http://metal.equinix.com/</a></p>
+          <a href="slack.equinixmetal.com">Slack Invite</a></p>
 
         <p class="view"><a href="https://github.com/packethost/community/">View This On GitHub</a></p>
 
