--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
       <header>
         <h1><a href="https://packethost.github.io/community/">Equinix Metal Community</a></h1>
         
+        <p>The Equinix Metal Community is a space for bare metal developers, collaborators, and friends to chat and support one another in an inclusive, playful, and so very metal space.</p>
+        
         <p><a href="metal.equinix.com">http://metal.equinix.com/</a></p>
 
         <p><a href="eqix-metal-community.slack.com">eqix-metal-community.slack.com</a><br>
