--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         
         <p>The Equinix Metal Community is a space for bare metal developers, collaborators, and friends to chat and support one another in an inclusive, playful, and so very metal space.</p>
         
-        <p><a href="metal.equinix.com">http://metal.equinix.com/</a></p>
+        <p><a href="http://metal.equinix.com/">metal.equinix.com</a></p>
 
         <p><a href="eqix-metal-community.slack.com">eqix-metal-community.slack.com</a><br>
           <a href="slack.equinixmetal.com">Slack Invite</a></p>
@@ -30,7 +30,7 @@
       <section>
         <h3>
 <a id="welcome" class="anchor" href="#welcome" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome</h3>
-<p>The Equinix Metal Community is a space for bare metal developers, collaborators, and friends to chat and support one another in an inclusive, playful, and so very metal space.</p>
+<p>Equinix Metal™ is an automated, interconnected, low-latency bare metal-as-a-service, that is available in global locations across Platform Equinix®. We enable digital businesses to more quickly be at the center of the customers, suppliers, and partners with whom they want to connect.</p>
       </section>
       <footer>
         <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
