--- a/index.html
+++ b/index.html
@@ -23,6 +23,11 @@
 
         <p><a href="eqix-metal-community.slack.com">eqix-metal-community.slack.com</a><br>
           <a href="slack.equinixmetal.com">Slack Invite</a></p>
+        
+        <p><b>Have a question or need help?</b><br>
+          We're available 24/7/365. Please join us on slack or contact us directly:<br><br>
+          +1 212-933-9785<br>
+          <a href="mailto:support@equinixmetal.com">support@equinixmetal.com</a></p>
 
         <p class="view"><a href="https://github.com/packethost/community/">View This On GitHub</a></p>
 
