--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <p><a href="http://metal.equinix.com/">metal.equinix.com</a></p>
 
         <p><a href="eqix-metal-community.slack.com">eqix-metal-community.slack.com</a><br>
-          <a href="slack.equinixmetal.com">Slack Invite</a></p>
+          <a href="http://slack.equinixmetal.com">slack.equinixmetal.com</a></p>
         
         <p><b>Have a question or need help?</b><br>
           We're available 24/7/365. Please join us on slack or contact us directly:<br><br>
