--- a/index.html
+++ b/index.html
@@ -37,12 +37,10 @@
         <p><a href="http://metal.equinix.com/">Equinix Metal™</a> is an automated, interconnected, low-latency bare metal-as-a-service, that is available in global locations across Platform Equinix®. We enable digital businesses to more quickly be at the center of the customers, suppliers, and partners with whom they want to connect.</p>
         
         <ul>
-  {% for post in site.posts %}
-    <li>
-      <a href="{{ post.url }}">{{ post.title }}</a>
-    </li>
-  {% endfor %}
-</ul>
+          <li>
+            [Welcome to Our Community]({% post_url 2020-10-28-welcome-to-our-community %})
+          </li>
+        </ul>
         
       </section>
       <footer>
