--- a/index.html
+++ b/index.html
@@ -36,11 +36,7 @@
         <h3><a id="welcome" class="anchor" href="#welcome" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome</h3>
         <p><a href="http://metal.equinix.com/">Equinix Metal™</a> is an automated, interconnected, low-latency bare metal-as-a-service, that is available in global locations across Platform Equinix®. We enable digital businesses to more quickly be at the center of the customers, suppliers, and partners with whom they want to connect.</p>
         
-        <ul>
-          <li>
-            [Welcome to Our Community]({% post_url 2020-10-28-welcome-to-our-community %})
-          </li>
-        </ul>
+        <p><a href="2020-10-28-welcome-to-our-community">Welcome to Our Community</a></p>
         
       </section>
       <footer>
